--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "exploring-hooks",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "gh-pages": "^2.0.1",
-    "grommet": "^2.5.5",
-    "grommet-icons": "^4.2.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-scripts": "^2.1.8",
-    "styled-components": "^4.1.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "homepage": "https://pixelume.github.io/chingu-project.git/",
+    "name": "exploring-hooks",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "gh-pages": "^2.0.1",
+        "grommet": "^2.5.5",
+        "grommet-icons": "^4.2.0",
+        "react": "^16.8.3",
+        "react-dom": "^16.8.3",
+        "react-scripts": "^2.1.8",
+        "styled-components": "^4.1.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
