updated package.json to fix homepage address

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://pixelume.github.io/chingu-project.git/",
+    "homepage": "https://pixelume.github.io/chingu-project/",
     "name": "exploring-hooks",
     "version": "0.1.0",
     "private": true,
